--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "nodemon": "^3.0.1"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
