--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "openai": "^3.3.0"
+    "openai": "^3.3.0",
+    "readline-sync": "^1.4.10"
   }
 }
